Alfresco Monitoring with Docker and ELK stack